RESOLVED FIXED95386
Fix assertion on Document::recalcStyle to not recalc style while painting
https://bugs.webkit.org/show_bug.cgi?id=95386
Summary Fix assertion on Document::recalcStyle to not recalc style while painting
Rafael Brandao
Reported 2012-08-29 15:03:42 PDT
Fix assertion on Document::recalcStyle to not recalc style while painting
Attachments
Patch (1.40 KB, patch)
2012-08-29 15:08 PDT, Rafael Brandao
no flags
Rafael Brandao
Comment 1 2012-08-29 15:08:11 PDT
Eric Seidel (no email)
Comment 2 2012-08-29 15:10:49 PDT
Comment on attachment 161326 [details] Patch Unfortunately the EWS won't test Debug builds, so we'll have to learn from the bots after landing.
WebKit Review Bot
Comment 3 2012-08-29 20:48:06 PDT
Comment on attachment 161326 [details] Patch Clearing flags on attachment: 161326 Committed r127092: <http://trac.webkit.org/changeset/127092>
WebKit Review Bot
Comment 4 2012-08-29 20:48:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.