Fix assertion on Document::recalcStyle to not recalc style while painting https://bugs.webkit.org/show_bug.cgi?id=95386

Reviewed by Eric Seidel.

* dom/Document.cpp: Move assertion outside the if to reflect that safety check.


Canonical link: https://commits.webkit.org/113263@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127092 268f45cc-cd09-0410-ab3c-d52691b4dbfc